--- a/src/App.css
+++ b/src/App.css
@@ -13,30 +13,16 @@ td {
   border-top: 1px solid #ebebeb;
 }
 
-#btn {
+button {
   border: none;
   background: none;
   font-size: 20px;
   color: #2f3032;
 }
 
-#disabledBtn {
+button:disabled {
   border: none;
   background: none;
   font-size: 20px;
   color: #d5d9e0
-}
-
-label {
-  color: #2f3032;
-  font-size: 20px;
-  margin-right: 1rem;
-}
-
-.selectAll {
-  margin: 1.3rem;
-}
-
-.highlightedRow {
-  background-color: "#EEEEEE"
 }
